--- a/src/App.scss
+++ b/src/App.scss
@@ -17,3 +17,18 @@
     font-size: 20px;
   }
 }
+
+@media (min-width: 1920px) {
+  .header {
+    justify-content: center;
+
+    &__logo {
+      width: 48px;
+      height: 48px;
+    }
+
+    &__title {
+      font-size: 36px;
+    }
+  }
+}
