--- a/src/components/palette/Palette.scss
+++ b/src/components/palette/Palette.scss
@@ -6,20 +6,19 @@
   &__selector {
     display: flex;
     justify-content: space-between;
-    gap: 8px;
     margin: 16px;
 
     &--circleinactived {
-      width: 40px;
-      height: 40px;
-      border-radius: 1000px;
-      border: 2px solid #ffffff;
-    }
-    &--circleactived {
       width: 48px;
       height: 48px;
-      border-radius: 1000px;
-      border: 2px solid #ffffff;
+      border-radius: 32px;
+      border: 3px solid #ffffff;
+    }
+    &--circleactived {
+      width: 56px;
+      height: 56px;
+      border-radius: 36px;
+      border: 3px solid #ffffff;
     }
   }
 }
@@ -55,7 +54,7 @@
     }
     &--add {
       background-color: #ffffff;
-      padding: 8px 20px;
+      padding: 8px 28px;
       border-radius: 10px;
       font-weight: bold;
       font-size: 20px;
@@ -76,7 +75,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0px 4px;
+    margin: 0px 0px -12px 4px;
 
     &--title {
       color: #ffffff;
@@ -100,17 +99,61 @@
     border-radius: 8px;
 
     &--circleinactived {
-      width: 40px;
-      height: 40px;
-      border-radius: 1000px;
-      border: 2px solid #ffffff;
+      width: 48px;
+      height: 48px;
+      border-radius: 32px;
+      border: 3px solid #ffffff;
     }
   }
 }
 
 @media (min-width: 1920px) {
+  .palette-box {
+    &__selector {
+      justify-content: center;
+      gap: 32px;
+      margin-top: 64px;
+
+      &--circleinactived {
+        width: 64px;
+        height: 64px;
+        border-radius: 36px;
+      }
+
+      &--circleactived {
+        width: 72px;
+        height: 72px;
+        border-radius: 40px;
+      }
+    }
+  }
+
+  .compact-box {
+    margin: 0px 54px;
+  }
+
   .compact-box__desktop {
     display: flex;
+    justify-content: center;
+    margin-top: 64px;
+  }
+
+  .searcher-box__tools {
+    width: 125%;
+  }
+
+  .palettelist-box {
+    margin-left: 384px;
+    &__title {
+      padding-top: 64px;
+      margin-left: 148px;
+    }
+  }
+
+  .palettelist-container {
+    display: flex;
+    flex-wrap: wrap;
+    width: 80%;
     justify-content: center;
   }
 }
