--- a/src/components/palette/Palette.scss
+++ b/src/components/palette/Palette.scss
@@ -7,6 +7,7 @@
     display: flex;
     justify-content: space-between;
     margin: 16px;
+    height: 62px;
 
     &--circleinactived {
       width: 48px;
@@ -29,7 +30,7 @@
   margin: 16px;
 }
 
-.searcher-box {
+.generator-box {
   margin-left: 16px;
 
   &__title {
@@ -138,7 +139,7 @@
     margin-top: 64px;
   }
 
-  .searcher-box__tools {
+  .generator-box__tools {
     width: 125%;
   }
 
